tests/errors/nonnull_return_with_null_branch.dang
# Declaring String! return type but returning null in one branch should be a type error
maybeString(flag: Boolean!): String! {
  if (flag) {
    "hello"
  } else {
    null
  }
}
